fixed some spacing :snowflake::snowflake:

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -39,12 +39,12 @@ section {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 70%;
+        width: 80%;
         margin: 0 auto;
         background-color: $yellowColor;
         border: 10px solid $primaryRed;
         border-radius: 50px;
-        padding: 50px;
+        padding: 20px;
         height: 50vh;
         .imgContainer {
             width: 50%;
@@ -52,7 +52,7 @@ section {
                 width: 60%;
                 transition: 0.5s cubic-bezier(.22,.82,.83,1);
                 &:hover, &:focus {
-                    width: 70%;
+                    width: 80%;
                     filter: drop-shadow(0 10px 0.6rem black);
                 }
             }
@@ -70,7 +70,7 @@ section {
                     padding: 10px;
                     width: 50%;
                     h3 {
-                        padding: 10px;
+                        padding: 15px;
                         text-shadow: 5px 5px red;
                     }
                     li {
@@ -78,6 +78,9 @@ section {
                         margin: auto;
                         height: 50px;
                         text-transform: capitalize;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                         &:hover .icon {
                             filter: drop-shadow(0 10px 0.6rem black);
                             width: 32px;
@@ -100,11 +103,9 @@ section {
     // class for pokemon type icons
     .icon {
        width: 30px;
-       margin-bottom: -10px;
-       padding-top: 10px;
+       margin-right: 5px;
        transition: 0.5s cubic-bezier(.22,.82,.83,1) ease;
        transition: animation wobble;
-    
     }
 
    .pikachuGif {
@@ -137,8 +138,10 @@ section {
 
 // footer
 footer {
-    padding: 20px;
     background: $primaryRed;
+    p {
+        padding: 20px;
+    }
 }
 
 @import "partials/mediaqueries";
